--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
